Translation in taxons page

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -42,3 +42,5 @@ en:
         title_html: Christmas beer 2015
         description_html: Christmas beer twelfth edition, available in the cozy siphon shaped 2 litres bottle. For the first time in glass, it pictures the FORST plant dressed for Christmas.
         call_to_action: DISCOVER MORE
+    taxons:
+      see_products: See Products
