--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -42,3 +42,5 @@ it:
         title_html: La birra di Natale 2015
         description_html: La dodicesima edizione della Birra di Natale, disponibile nell’elegante bottiglia da 2 litri a forma di sifone. Per la prima volta in vetro, raffigura lo stabilimento di Birra FORST in veste natalizia.
         call_to_action: SCOPRI DI PIÚ
+    taxons:
+      see_products: Scopri i prodotti
