--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -47,5 +47,7 @@ en:
           Christmas beer twelfth edition, available in the cozy siphon shaped 2 litres bottle.
           For the first time in glass, it pictures the FORST plant dressed for Christmas.
         call_to_action: DISCOVER MORE
+          <br>
+          For the first time in glass, it pictures the FORST plant dressed for Christmas.
     taxons:
       see_products: See Products
