Last HP translation

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -42,6 +42,7 @@ de:
           Entdecken Sie unsere Produkte und treten Sie ein in die magische Welt der Brauerei FORST.
       boxes:
         merchandising: Merchandising
+        our_beers: Our beers
         christmas_beer: Das Weihnachtsbier
       banner_product:
         title_html: Christmas beer 2015
