--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -40,6 +40,7 @@ en:
           Let yourself be inspired by our products and join the magical wolrd of FORST brewery.
       boxes:
         merchandising: Merchandising
+        our_beers: Our beers
         christmas_beer: Christmas beer
       banner_product:
         title_html: Christmas beer 2015
