--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -42,6 +42,7 @@ it:
           Lasciati ispirare dai nostri prodotti e ritrova la magia del mondo FORST.
       boxes:
         merchandising: Il merchandising
+        our_beers: Le nostre birre
         christmas_beer: La birra di Natale
       banner_product:
         title_html: La birra di Natale 2015
