--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -27,10 +27,10 @@ it:
       our_beers: Le nostre birre
       merchandising: Il merchandising
       christmas_beer: La birra di Natale
-      contacts: CONTATTI
+      contacts: Contatti
       website: www.forst.it
       mail: shop@forst.it
-      follow_us: SEGUICI
+      follow_us: Seguici
     home:
       splash:
         title_html: Il magico mondo della Spezialbier-Brauerei FORST ti dà il benvenuto.
