--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -11,7 +11,7 @@ it:
       responsible_consumption: Consumo Responsabile
       privacy: Informativa sulla privacy
       sales_conditions: condizioni generali di vendita
-      forbidden_message: >
+      forbidden_message_html: >
         L'accesso è consentito solo ai maggiorenni.
         <br />
         Torna quando sarai più grande per gustare la birra FORST!
