localizate for static and footer page

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -490,5 +490,10 @@ de:
         </p>
         <p><a href="//assets.jumpseller.com/store/forstshop/themes/45570/Muster-Widerrufsformular.pdf"> Muster-Wiederrufsformular herunterladen</a>
         </p>
+    contacts:
+      title: Kontakt
+      subtitle: Wenn Sie mehr über uns erfahren möchten, haben Fragen oder Hilfe brauchen, so zögern Sie nicht uns zu kontaktieren. Wir freuen uns von Ihnen zu hören.
+      address_contacts: Spezialbier-Brauerei FORST - Vinschgauerstraße 11, 39022 Algund BZ
+
     taxons:
       see_products: Erfahren Sie mehr
