--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -475,5 +475,10 @@ it:
         <strong>13.4</strong> L'invalidità di uno o più clausole delle presenti condizioni generali di contratto non pregiudica la validità delle rimanenti clausole contrattuali.
         </p><p><a href="https://assets.jumpseller.com/store/forstshop/themes/45570/Modulo diritto di recesso_ita.pdf"><strong>Scarica il modulo di recesso</strong></a><br>
         </p>
+    contacts:
+      title: Contatti
+      subtitle: Se vuoi saperne più su di noi, hai domande o ti serve aiuto sentiti libero di contattarci. Ci piacerebbe molto conoscerti!
+      address_contacts: Birra Forst Via Venosta, 11 39022 Forst/Lagundo (BZ)
+
     taxons:
       see_products: Scopri i prodotti
