--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -60,9 +60,9 @@ de:
         call_to_action: Erfahren sie mehr
     checkout:
       payment_message_html: >
-        Premi il <strong>pulsante "PayPal"</strong> per procedere al pagamento tramite la piattaforma PayPal, oppure inserisci di seguito le informazioni relative alla tua <strong>Carta di Credito</strong>.
+        Klicken Sie auf <strong>"PayPal"</strong> für eine Zahlung mittels PayPal-System oder geben Sie nachstehend die Informationen zu Ihrer Kreditkarte ein.
         <br />
-        Per confermare il pagamento e procedere al prossimo step clicca <strong>"Salva e Continua"</strong>.
+        Um die Zahlung zu bestätigen, klicken Sie bitte auf <strong>"Speichern und fortfahren"</strong>
     privacy:
       title: Datenschutzbestimmungen
       subtitle: gemäß Art. 13 der Gesetzesverordnung Nr. 196/2003
