fixed minor issues

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -30,7 +30,7 @@ de:
       sales_conditions: Verkaufsbedingungen
       products: Produzieren
     big_footer:
-      categories: Kategorien  
+      categories: Kategorien
       our_beers: Unsere Bierspezialitäten
       merchandising: Merchandising
       christmas_beer: Das Weihnachtsbier
@@ -491,7 +491,7 @@ de:
         </p>
         <p><b>13.4</b> Die Unwirksamkeit einer oder mehrerer Klauseln der vorliegenden allgemeinen Verkaufsbedingungen berührt nicht die Wirksamkeit der verbleibenden vertraglichen Vorschriften.
         </p>
-        <p><a href="//assets.jumpseller.com/store/forstshop/themes/45570/Muster-Widerrufsformular.pdf"> Muster-Wiederrufsformular herunterladen</a>
+        <p><a href="/pdf/Rev_form_IT.pdf" download> <strong>Muster-Wiederrufsformular herunterladen</strong></a>
         </p>
     contacts:
       title: Kontakt
