--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -485,7 +485,7 @@ it:
         <strong>13.3</strong> In caso di controversie nascenti dal presente contratto, qualora le Parti intendano adire l’Autorità giudiziaria ordinaria, il Foro competente è quello del luogo di residenza o di domicilio elettivo del Consumatore, inderogabile ai sensi dell’art. 33, comma 2, lett. <em>u</em>) del d.lgs. 206/2005.
         </p><p>
         <strong>13.4</strong> L'invalidità di uno o più clausole delle presenti condizioni generali di contratto non pregiudica la validità delle rimanenti clausole contrattuali.
-        </p><p><a href="https://assets.jumpseller.com/store/forstshop/themes/45570/Modulo diritto di recesso_ita.pdf"><strong>Scarica il modulo di recesso</strong></a><br>
+        </p><p><a href="/pdf/Rev_form_IT.pdf" download><strong>Scarica il modulo di recesso</strong></a><br>
         </p>
     contacts:
       title: Contatti
