--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -501,3 +501,16 @@ de:
 
     taxons:
       see_products: Erfahren Sie mehr
+
+# DE translation waiting for updates on solidus_i18n
+# Frontend
+    adjustment_labels:
+      tax_rates:
+        sales_tax: '%{name}'
+        vat: '%{name} (incl.)'
+        sales_tax_with_rate: '%{name} %{amount}'
+        vat_with_rate: '%{name} %{amount} (incl.)'
+        sales_tax_refund: 'Refund: %{name}'
+        vat_refund: 'Refund: %{name} (incl.)'
+        sales_tax_refund_with_rate: 'Refund: %{name} %{amount}'
+        vat_refund_with_rate: 'Refund: %{name} %{amount} (incl.)'
