--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -7,6 +7,7 @@ de:
     cart: 'Warenkorb'
     empty: 'Leer'
     items_cannot_be_shipped: Leider können wir Alkohol nur in Italien versandt.
+    starting_from: Ab
     underage:
       affirmative: JA
       negative: NEIN
