New locale for clothing

--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -13,7 +13,7 @@ it:
     categories:
       beers: Birre
       merchandising: Merchandising
-      clothing: Vestiti
+      clothing: Abbigliamento
       accessories: Accessori
       glasses: Bicchieri
     taxons:
