Add localized routes fro privacy, sales conditions and contacts

--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -1,4 +1,8 @@
 it:
+  routes:
+    privacy: privacy
+    contacts: contatti
+    sales_conditions: condizioni-di-vendita
   spree:
     order_mutex_error: Order Mutex error
     locale_en: EN
