--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1,4 +1,8 @@
 de:
+  routes:
+    privacy: privacy
+    contacts: kontakt
+    sales_conditions: verkaufsbedingungen
   spree:
     order_mutex_error: Order Mutex error
     locale_en: EN
