Add conciliazione subsection to sales and conditions page

--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -501,6 +501,17 @@ it:
           <strong>13.4</strong> L'invalidità di uno o più clausole delle presenti condizioni generali di contratto non pregiudica la validità delle rimanenti clausole contrattuali.
           </p><p><a href="/pdf/Rev_form_IT.pdf" download><strong>Scarica il modulo di recesso</strong></a><br>
           </p>
+          </p><p>
+          <strong>14 - Conciliareonline</strong>
+          </p><p>
+          <strong>14.1</strong> Informiamo i Consumatori residenti in Europa che per la risoluzione delle controversie nascenti da acquisti online 
+          di beni o servizi sul nostro sito, potranno rivolgersi, previo preliminare contatto con noi volto alla risoluzione diretta del reclamo 
+          <a href="mailto:info@forst.it">info@forst.it</a>, all'organismo ADR “Conciliareonline.it”, sul sito web “<a href="http://www.conciliareonline.it">www.conciliareonline.it</a>:<br/>
+          Via Dodiciville, 2<br />
+          I -39100 Bolzano (BZ)<br />
+          tel. 0471/975597<br />
+          fax 0471/979914,<br />
+          oppure potranno presentare reclamo accedendo alla Piattaforma ODR, istituita dalla Commissione Europea, al seguente link <a href="http://ec.europa.eu/odr">http://ec.europa.eu</a>.
       contacts:
         title: Contatti
         subtitle: Se vuoi saperne più su di noi, hai domande o ti serve aiuto sentiti libero di contattarci. Ci piacerebbe molto conoscerti!
