--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -509,6 +509,16 @@ de:
           </p>
           <p><a href="/pdf/Rev_form_IT.pdf" download> <strong>Muster-Wiederrufsformular herunterladen</strong></a>
           </p>
+          <strong>14 - Onlineschlichter.it</strong>
+          </p><p>
+          <strong>14.1</strong> In Europa ansässige VerbraucherInnen können sich für die Lösung von Streitfällen aus dem Kauf von Waren und Dienstleistungen 
+          über unsere Website an die Schlichtungsstelle Onlineschlichter.it wenden. Voraussetzung ist, dass zuerst ein direkter Kontakt mit uns erfolgt ist, 
+          um die Beschwerde direkt bereinigen zu können; hierzu können Sie eine E-Mail an <a href="mailto:info@forst.it">info@forst.it</a> senden. <a href="http://www.conciliareonline.it">www.conciliareonline.it</a><br/>
+          Zwölfmalgreinerstrasse 2<br />
+          I -39100 Bolzano (BZ)<br />
+          tel. 0471/975597<br />
+          fax 0471/979914, <br />
+          alternativ können Sie die Beschwerde auch über die ODR-Plattform der Europäischen Kommission unter folgendem Link einreichen <a href="http://ec.europa.eu/odr">http://ec.europa.eu</a>.
       contacts:
         title: Kontakt
         subtitle: Wenn Sie mehr über uns erfahren möchten, haben Fragen oder Hilfe brauchen, so zögern Sie nicht uns zu kontaktieren. Wir freuen uns von Ihnen zu hören.
