New translation links

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -14,11 +14,11 @@ de:
     starting_from: Ab
     categories:
       categories: Kategorien
-      beers: Biere
-      merchandising: Merchandising
-      clothing: Bekleidung
-      accessories: Accessoires
-      glasses: Gläser
+      beers: DIE BIERE
+      merchandising: MERCHANDISING
+      clothing: BEKLEIDUNG
+      accessories: ACCESSORIES
+      glasses: DIE GLÄSER
     underage:
       affirmative: JA
       negative: NEIN
