--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -14,8 +14,8 @@ de:
     starting_from: Ab
     categories:
       categories: Kategorien
-      beers: DIE BIERE
-      merchandising: MERCHANDISING
+      beers: UNSERE BIERSPEZIALITÄTEN
+      merchandising: DER MERCHANDISING
       clothing: BEKLEIDUNG
       accessories: ACCESSORIES
       glasses: DIE GLÄSER
