--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -16,7 +16,7 @@ it:
     starting_from: A partire da
     categories:
       beers: LE NOSTRE BIRRE
-      merchandising: MERCHANDISING
+      merchandising: IL MERCHANDISING
       clothing: ABBIGLIAMENTO
       accessories: ACCESSORI
       glasses: I BICCHIERI
