changed name of merchandising

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -15,7 +15,7 @@ de:
     categories:
       categories: Kategorien
       beers: UNSERE BIERSPEZIALITÄTEN
-      merchandising: DER MERCHANDISING
+      merchandising: DAS MERCHANDISING
       clothing: BEKLEIDUNG
       accessories: ACCESSORIES
       glasses: DIE GLÄSER
@@ -511,8 +511,8 @@ de:
           </p>
           <strong>14 - Onlineschlichter.it</strong>
           </p><p>
-          <strong>14.1</strong> In Europa ansässige VerbraucherInnen können sich für die Lösung von Streitfällen aus dem Kauf von Waren und Dienstleistungen 
-          über unsere Website an die Schlichtungsstelle Onlineschlichter.it wenden. Voraussetzung ist, dass zuerst ein direkter Kontakt mit uns erfolgt ist, 
+          <strong>14.1</strong> In Europa ansässige VerbraucherInnen können sich für die Lösung von Streitfällen aus dem Kauf von Waren und Dienstleistungen
+          über unsere Website an die Schlichtungsstelle Onlineschlichter.it wenden. Voraussetzung ist, dass zuerst ein direkter Kontakt mit uns erfolgt ist,
           um die Beschwerde direkt bereinigen zu können; hierzu können Sie eine E-Mail an <a href="mailto:info@forst.it">info@forst.it</a> senden. <a href="http://www.conciliareonline.it">www.conciliareonline.it</a><br/>
           Zwölfmalgreinerstrasse 2<br />
           I -39100 Bolzano (BZ)<br />
