--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -8,6 +8,7 @@ de:
     contacts: kontakt
     sales_conditions: verkaufsbedingungen
   spree:
+    packaging_christmas: Confezione spedizione Birra di Natale
     order_mutex_error: Order Mutex error
     locale_en: EN
     locale_it: IT
